syntax = "proto3";

package com.android.car.trust.BLEHandshake;

option java_package = "com.android.car.trust";
option java_outer_classname = "BLEHandshake";

message VersionExchange {
  // Required.
  int32 minSupportedVersion = 1;

  // Required.
  int32 maxSupportedVersion = 2;
}