syntax = "proto3";

package aae.blemessagestream;

import "packages/services/Car/service/proto/operation_type.proto";

option java_package = "com.android.car.BleStreamProtos";
option java_outer_classname = "BleDeviceMessageProto";

// A message between devices.
message BleDeviceMessage {

  // The current version of the protocol.
  int32 version = 1;

  // The different message types that indicate the content of the payload.
  enum OperationType {
    // The contents of the payload are unknown.
    UNKNOWN = 0;

    // The payload contains handshake messages needed to set up encryption.
    ENCRYPTION_HANDSHAKE = 1;

    // The message is an acknowledgment of a previously received message. The
    // payload for this type should be empty.
    ACK = 2;

    // The payload contains a client-specific message.
    CLIENT_MESSAGE = 3;
  }

  // The operation that this message represents.
  OperationType operation = 2;

  // Whether the payload field is encrypted.
  bool is_payload_encrypted = 3;

  // Identifier of the intended recipient.
  bytes recipient = 4;

  // The bytes that represent the content for this message.
  bytes payload = 5;
}
